[tool.poetry]
name = "youtube-video-download"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <rm.panegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
yt-dlp = "^2025.1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
